--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <h2>Tweets</h2>
                     <div class="tweets-frame">
                         <a class="twitter-timeline" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a>
-                        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     <div class="social d-flex justify-content-between align-items-center">
                         <p>Social Connecting</p>
